Structural changes + minor tweaks to form

--- a/styles/AboutLiving.module.scss
+++ b/styles/AboutLiving.module.scss
@@ -6,4 +6,15 @@
 .form {
   display: flex;
   flex-direction: column;
+  .headline {
+    font-weight: bold;
+  }
+
+  .checkboxContainer {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    .checkboxes {
+      margin-top: 0.5rem;
+    }
+  }
 }
