--- a/styles/AdStyling/About.module.scss
+++ b/styles/AdStyling/About.module.scss
@@ -1,11 +1,19 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  border-radius: 3rem;
+  padding-left: 2rem;
 }
 
 .form {
+  background-color: white;
   display: flex;
   flex-direction: column;
+
   .headline {
     font-weight: bold;
   }
