--- a/styles/AdStyling/About.module.scss
+++ b/styles/AdStyling/About.module.scss
@@ -3,26 +3,121 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
-  width: 100vw;
-  height: 100vh;
   border-radius: 3rem;
   padding-left: 2rem;
+
+  .infoButtons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .btn {
+      background-color: white;
+      font-size: 1rem;
+      text-transform: uppercase;
+      font-weight: bold;
+      text-align: center;
+      margin: 0.5rem 0rem;
+      padding: 1rem 1rem;
+      border: 1px solid black;
+      border-radius: 1.5rem;
+      max-width: 100%;
+      &:hover,
+      &:focus {
+        background-color: rgba(blue, 0.5);
+        color: white;
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .aboutWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 4rem;
+    span {
+      display: block;
+      font-weight: bold;
+      font-size: 2.5rem;
+    }
+
+    p {
+      font-size: 2rem;
+    }
+  }
 }
 
-.form {
-  background-color: white;
+.calculateRentWrapper {
+  background-color: rgba(purple, 0.5);
+  border-radius: 2rem;
+  margin: 2rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
 
-  .headline {
-    font-weight: bold;
+  h2 {
+    margin-bottom: 2rem;
   }
 
-  .checkboxContainer {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    .checkboxes {
-      margin-top: 0.5rem;
+  label {
+    font-weight: bold;
+    padding: 1rem 0rem 0.2rem 0rem;
+  }
+
+  select {
+    border-radius: 1rem;
+    padding: 0.2rem;
+  }
+
+  input {
+    border-radius: 1rem;
+    padding: 0.2rem;
+    border: 0.7px solid black;
+  }
+}
+
+.paymentWrapper {
+  margin-top: 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  button {
+    background-color: white;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    margin: 0.5rem 0rem;
+    padding: 1rem 1rem;
+    border: 1px solid black;
+    border-radius: 1.5rem;
+    max-width: 100%;
+    &:hover,
+    &:focus {
+      background-color: rgba(green, 0.5);
+      color: white;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .headline {
+      font-weight: bold;
+    }
+
+    .checkboxContainer {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+
+      .checkboxes {
+        margin-top: 0.5rem;
+      }
     }
   }
 }
