--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,15 +1,20 @@
 .container {
   display: flex;
-  justify-content: center;
-  overflow: hidden;
+  align-items: center;
 
-  .title {
-    padding-left: 2rem;
+  .titleWrapper {
+    display: flex;
+    position: absolute;
+    left: 100px;
+    top: 50%;
+    width: 500px;
+
+    .title {
+      font-size: 2.5rem;
+      color: white;
+      line-height: 3rem;
+    }
   }
-}
-
-.formContainer {
-  width: 100vw;
 }
 
 .btn {
@@ -22,6 +27,7 @@
   padding: 0 60px;
   height: 60px;
   border: none;
+  border-radius: 2rem;
   max-width: 100%;
   &:hover,
   &:focus {
@@ -31,6 +37,9 @@
 }
 
 .buttons {
+  bottom: 10px;
   display: flex;
-  gap: 1rem;
+  justify-content: space-between;
+  width: 50vw;
+  padding: 1rem;
 }
