--- a/styles/AdStyling/About.module.scss
+++ b/styles/AdStyling/About.module.scss
@@ -1,10 +1,10 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  border-radius: 3rem;
-  padding-left: 2rem;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // background-color: white;
+  // border-radius: 3rem;
+  // padding-left: 2rem;
 
   .infoButtons {
     display: flex;
