--- a/styles/NewAd.module.scss
+++ b/styles/NewAd.module.scss
@@ -1,13 +1,14 @@
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
-}
+// .container {
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+//   justify-items: center;
+//   height: 100vh;
+// }
 
-.header {
-  background: #ff00cc;
-  background: -webkit-linear-gradient(to top, #333399, #ff00cc);
-  background: linear-gradient(to top, #333399, #ff00cc);
+// .header {
+//   background: #ff00cc;
+//   background: -webkit-linear-gradient(to top, #333399, #ff00cc);
+//   background: linear-gradient(to top, #333399, #ff00cc);
 
-  width: 50vw;
-}
+//   width: 50vw;
+// }
