--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
 $sm: 400px;
-$md: 800px;
+$md: 850px;
 $lg: 1200px;
 
 .NavbarItems {
@@ -10,7 +10,7 @@ $lg: 1200px;
   @media (min-width: $md) {
     padding: 0;
     margin: 0;
-    background: rgba(white, 0.5);
+    background: rgba(white, 1);
     // height: 80px;
     font-size: 1.2rem;
     position: absolute;
@@ -23,7 +23,7 @@ $lg: 1200px;
     display: none;
     color: black;
     list-style: none;
-    background-color: green;
+    background: rgba(white, 0.5);
 
     @media (min-width: $md) {
       display: flex;
@@ -33,6 +33,10 @@ $lg: 1200px;
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+    }
+
+    .PrimaryLinksWrapper {
+      display: flex;
     }
 
     li {
@@ -49,20 +53,24 @@ $lg: 1200px;
     width: 100vw;
     height: 500px;
     position: absolute;
-    top: 80px;
+    // top: 80px;
     left: 0;
     opacity: 1;
     list-style: none;
     transition: all 0.5s ease;
     @media (min-width: $md) {
+      .PrimaryLinksWrapper {
+        display: flex;
+        flex-direction: column;
+      }
       display: grid;
-      grid-template-columns: repeat(5, auto);
+      grid-template-columns: repeat(3, auto);
       grid-gap: 10px;
       list-style: none;
-      text-align: center;
       width: 70vw;
-      justify-content: end;
+      justify-content: space-between;
       margin-right: 2rem;
+      padding-top: 3rem;
     }
 
     p {
@@ -73,25 +81,24 @@ $lg: 1200px;
   }
 
   .NavLinksPrimary {
+    font-size: 1.5rem;
     font-weight: bold;
-    text-align: center;
-    padding: 0.4rem 1rem;
+    padding: 1rem 1rem;
     width: 100%;
     display: table;
     &:hover {
-      background-color: rgba(#0e5657, 0.5);
+      background-color: rgba(#0e5657, 1);
       color: white;
       border-radius: 1rem;
     }
   }
 
   .NavLinks {
-    text-align: center;
     padding: 0.2em 1rem;
     width: 100%;
     display: table;
     &:hover {
-      background-color: rgba(#0e5657, 0.5);
+      background-color: rgba(#0e5657, 1);
       color: white;
       border-radius: 1rem;
     }
@@ -126,6 +133,12 @@ $lg: 1200px;
       &:hover {
         color: #0e5657;
       }
+    }
+  }
+
+  .SubMenu {
+    @media (min-width: $md) {
+      display: none;
     }
   }
 }
