added component to buttons

--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -29,9 +29,9 @@
 
   .formContainer {
     border-radius: 25px 25px 0 0;
-    background-color: lightgrey;
+    background-color: #dee2e6;
 
-    min-height: 90vh;
+    min-height: 93vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
