--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,120 @@
 $sm: 400px;
 $md: 850px;
 $lg: 1200px;
+$primaryColor: #0e5657;
+$peachColor: #f88e75;
+$beigeColor: #f6ece3;
 
 .container {
-  padding: 80px 2rem;
+  font-family: GreyCliff;
+  margin-top: 80px;
+  overflow: hidden;
+
+  @media (min-width: $md) {
+  }
+
+  .HeaderImgContainer {
+    overflow: hidden;
+
+    @media (min-width: $md) {
+      height: 50vh;
+      width: 100vw;
+      background-position: center;
+    }
+    :nth-child(1) {
+      width: 100%;
+      height: 100%;
+      background-color: black; /* fallback color */
+      background-image: url("../assets/img/header_image.avif");
+      background-position: center;
+      background-size: cover;
+      transform: scale(1.4);
+    }
+  }
+
+  .Title {
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (min-width: $md) {
+      z-index: 2;
+      position: absolute;
+      width: 600px;
+      top: 250px;
+      left: calc(50% - 300px);
+      color: black;
+      span {
+        font-size: 2.5rem;
+        font-weight: normal;
+      }
+    }
+  }
+
+  .BtnsContainer {
+    @media (min-width: $md) {
+      position: absolute;
+      width: 700px;
+      top: 500px;
+      left: calc(50% - 325px);
+      .btn {
+        font-size: 1.5rem;
+        font-family: GreyCliff;
+        color: white;
+        background-color: $primaryColor;
+        padding: 1rem 4.5rem;
+        border: none;
+        border-radius: 2rem;
+        margin: 0rem 1.5rem;
+        &:hover {
+          background-color: black;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .DownArrow {
+    transform: translate(calc(50vw - 3rem), -2.5rem);
+    font-size: 3rem;
+    background-color: $peachColor;
+    padding: 1rem 1.2rem;
+    border-radius: 100%;
+    color: white;
+    mix-blend-mode: multiply;
+  }
+
+  .MainSection {
+    @media (min-width: $md) {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .InfoContainer {
+      background-color: $beigeColor;
+      margin: 2rem 2rem;
+      padding: 2rem;
+      border-radius: 1rem;
+      @media (min-width: $md) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .HouseChimney {
+        color: white;
+        font-size: 6rem;
+        padding: 2rem 2rem;
+      }
+
+      h2 {
+        color: $primaryColor;
+        padding: 1rem;
+      }
+
+      p {
+        padding: 1rem;
+      }
+    }
+  }
 }
