--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -7,8 +7,23 @@ $beigeColor: #f6ece3;
 
 .container {
   font-family: GreyCliff;
-  margin-top: 80px;
+  // margin-top: 80px;
   overflow: hidden;
+
+  .btn {
+    font-size: 1.5rem;
+    font-family: GreyCliff;
+    color: white;
+    background-color: $primaryColor;
+    padding: 1rem 4.5rem;
+    border: none;
+    border-radius: 2rem;
+    margin: 0rem 1.5rem;
+    &:hover {
+      background-color: black;
+      cursor: pointer;
+    }
+  }
 
   @media (min-width: $md) {
   }
@@ -17,7 +32,7 @@ $beigeColor: #f6ece3;
     overflow: hidden;
 
     @media (min-width: $md) {
-      height: 50vh;
+      height: 85vh;
       width: 100vw;
       background-position: center;
     }
@@ -28,21 +43,22 @@ $beigeColor: #f6ece3;
       background-image: url("../assets/img/header_image.avif");
       background-position: center;
       background-size: cover;
-      transform: scale(1.4);
+      transform: scale(1);
+      filter: blur(2px);
     }
   }
 
   .Title {
-    font-size: 3rem;
+    font-size: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     @media (min-width: $md) {
       z-index: 2;
       position: absolute;
-      width: 600px;
+      width: 650px;
       top: 250px;
-      left: calc(50% - 300px);
+      left: calc(50% - 325px);
       color: black;
       span {
         font-size: 2.5rem;
@@ -57,31 +73,37 @@ $beigeColor: #f6ece3;
       width: 700px;
       top: 500px;
       left: calc(50% - 325px);
-      .btn {
-        font-size: 1.5rem;
-        font-family: GreyCliff;
-        color: white;
-        background-color: $primaryColor;
-        padding: 1rem 4.5rem;
-        border: none;
-        border-radius: 2rem;
-        margin: 0rem 1.5rem;
-        &:hover {
-          background-color: black;
-          cursor: pointer;
-        }
-      }
+      // .btn {
+      //   font-size: 1.5rem;
+      //   font-family: GreyCliff;
+      //   color: white;
+      //   background-color: $primaryColor;
+      //   padding: 1rem 4.5rem;
+      //   border: none;
+      //   border-radius: 2rem;
+      //   margin: 0rem 1.5rem;
+      //   &:hover {
+      //     background-color: black;
+      //     cursor: pointer;
+      //   }
+      // }
     }
   }
 
-  .DownArrow {
-    transform: translate(calc(50vw - 3rem), -2.5rem);
-    font-size: 3rem;
-    background-color: $peachColor;
-    padding: 1rem 1.2rem;
-    border-radius: 100%;
-    color: white;
-    mix-blend-mode: multiply;
+  .ArrowContainer {
+    @media (min-width: $md) {
+      transform: translate(calc(50vw - 4rem), -2.5rem);
+      // mix-blend-mode: multiply;
+    }
+    .DownArrow {
+      font-size: 3rem;
+      background-color: $peachColor;
+      padding: 1rem 1.4rem;
+      border-radius: 100%;
+      color: white;
+      mix-blend-mode: multiply;
+      animation: bounce2 2s ease infinite;
+    }
   }
 
   .MainSection {
@@ -115,6 +137,58 @@ $beigeColor: #f6ece3;
       p {
         padding: 1rem;
       }
+    }
+  }
+
+  .LocationSection {
+    background-color: #f5eeee;
+    @media (min-width: $md) {
+      margin-top: 4rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h2 {
+      padding: 2.5rem;
+      font-size: 3rem;
+    }
+
+    .LocationContainers {
+      display: flex;
+      flex-direction: row;
+
+      .CityContainer {
+        background-color: gray;
+        width: 425px;
+        height: 290px;
+        margin: 2rem 2rem;
+        padding: 3.5rem 2rem;
+        border-radius: 1rem;
+        h3 {
+          text-align: center;
+          font-size: 2.2rem;
+        }
+      }
+    }
+    .btn {
+      margin-top: 5rem;
+    }
+  }
+
+  @keyframes bounce2 {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-10px);
+    }
+    60% {
+      transform: translateY(-5px);
     }
   }
 }
