--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -12,7 +12,7 @@ $primaryColor: #0e5657;
   @media (min-width: $md) {
     padding: 0;
     margin: 0;
-    background: rgba(white, 1);
+    background: rgba(white, 0.85);
     position: absolute;
     top: 0;
     left: 0;
@@ -89,7 +89,7 @@ $primaryColor: #0e5657;
 
   .NavLinksPrimary {
     font-size: 1.25rem;
-    font-weight: bold;
+    // font-weight: bold;
     padding: 0.3rem 1rem;
     width: 100%;
     display: table;
