--- a/styles/AdStyling/TypeOfLiving.module.scss
+++ b/styles/AdStyling/TypeOfLiving.module.scss
@@ -1,13 +1,3 @@
-.houseSize,
-.facilities {
-  width: 100%;
-  border-radius: 10px;
-  height: 45px;
-  margin: 10px 0 40px 0;
-  border: 1px solid #000;
-  padding: 8px;
-}
-
 .houseTypeContainer,
 .furnishedContainer,
 .extrasContainer {
@@ -16,43 +6,32 @@
   flex-wrap: wrap;
   gap: 15px;
   justify-content: center;
-
-  .extras {
-    width: 140px;
-    height: 94px;
-    background-color: #dedede;
-    border-radius: 10px;
-    border: 1px solid #000;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
 }
 
 .addTextContainer {
   text-align: end;
   margin-bottom: 30px;
-  .addText {
-    width: 100%;
-    border-radius: 10px;
-    height: 80px;
-    margin: 20px 0 10px 0;
-    border: 1px solid #000;
-    padding: 8px;
-  }
+}
 
-  .addTextBtn {
-    border: none;
-    background-color: #b4b4b4;
-    width: 140px;
-    height: 30px;
-    border-radius: 8px;
-    font-size: 16px;
-  }
+.addTextBtn {
+  border: none;
+  background-color: var(--input-button);
+  width: 140px;
+  height: 33px;
+  border-radius: 8px;
+  font-size: 16px;
+  padding: 3px;
 }
 
 .addFacilities {
   margin-top: 20px;
+}
+
+.addInfo {
+  margin-top: 30px;
+}
+
+.boldText {
+  //funkar inte??
+  font-weight: bold;
 }
