--- a/styles/AdStyling/Rentee.module.scss
+++ b/styles/AdStyling/Rentee.module.scss
@@ -1,20 +1,58 @@
 .container {
-  display: flex;
-  flex-direction: column;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  .headline {
-    font-weight: bold;
+  .counterContainer {
+    margin-top: 10px;
+    border: 2px solid var(--button-border);
+    border-radius: 14px;
   }
 
-  .checkboxContainer {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    .checkboxes {
-      margin-top: 0.5rem;
-    }
+  .singleCounter {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    align-items: center;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+  }
+
+  .button {
+    background-color: var(--input-button);
+    box-shadow: 0px 8px 10px rgba(192, 190, 189, 0.17);
+    border-radius: 45px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .addTextContainer {
+    text-align: end;
+    margin-bottom: 30px;
+  }
+
+  .addTextBtn {
+    border: none;
+    background-color: var(--input-button);
+    width: 140px;
+    height: 33px;
+    border-radius: 43px;
+    font-size: 16px;
+    padding: 3px;
+  }
+
+  .petsContainer,
+  .helpContainer,
+  .rentContainer {
+    margin: 25px 0;
+  }
+
+  .pets {
+    border: none;
   }
 }
