--- a/components/Parts/Textarea/Textarea.module.scss
+++ b/components/Parts/Textarea/Textarea.module.scss
@@ -2,7 +2,8 @@
   width: 100%;
   border-radius: 10px;
   height: 80px;
-  margin: 20px 0 10px 0;
+  margin: 10px 0 0px 0;
   border: 1px solid #000;
   padding: 15px;
+  font-family: "Greycliff";
 }
