--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -9,12 +9,13 @@
   @include desktop {
     display: flex;
     min-height: 100vh;
+    flex-direction: row-reverse;
   }
 
   .animation {
     @include desktop {
       //Personligen tyckte jag det var snyggare med header 40% och form 60%, vi kan dubbelkolla mot slutet
-      width: 50%;
+      width: 50vw;
     }
   }
 
@@ -23,7 +24,7 @@
     flex-direction: column;
 
     @include desktop {
-      width: 50%;
+      width: 50vw;
       background-color: var(--container);
       justify-content: space-between;
     }
@@ -47,7 +48,9 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  margin-top: 90px;
+  @include desktop {
+    margin-top: 90px;
+  }
 
   .title {
     font-size: 1.2rem;
