--- a/styles/AdStyling/TypeOfLiving.module.scss
+++ b/styles/AdStyling/TypeOfLiving.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .addTextContainer {
