--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -22,6 +22,7 @@
   .formContainer {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 
     @include desktop {
       width: 50vw;
