--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ a {
 * {
   box-sizing: border-box;
   margin: 0;
-  /* font-family: "Greycliff"; */
+  font-family: "Greycliff";
 }
 
 @font-face {
