--- a/styles/Footer/Footer.module.scss
+++ b/styles/Footer/Footer.module.scss
@@ -13,11 +13,15 @@ $beigeColor: #f6ece3;
   justify-content: center;
   align-items: center;
   height: 250px;
+  margin-left: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   @media (min-width: $md) {
     flex-direction: row;
     height: 225px;
-    width: 100vw;
+    width: 100%;
   }
 
   .IconsContainer {
