--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,6 +8,7 @@ $beigeColor: #f6ece3;
 .container {
   font-family: GreyCliff;
   overflow: hidden;
+  position: relative;
 
   .btn {
     font-size: 1rem;
@@ -266,9 +267,9 @@ $beigeColor: #f6ece3;
       h2 {
         font-size: 2rem;
         @media (min-width: $md) {
-          padding: 2.5rem;
+          padding-bottom: 2.5rem;
           font-size: 3rem;
-          margin-bottom: 8rem;
+          // margin-bottom: 8rem;
         }
       }
     }
@@ -277,6 +278,7 @@ $beigeColor: #f6ece3;
       display: flex;
       flex-direction: row;
       justify-content: center;
+      margin-bottom: 8rem;
 
       .StoryTwo {
         display: none;
