--- a/styles/SignUpInfo.module.scss
+++ b/styles/SignUpInfo.module.scss
@@ -1,10 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 80px;
+  width: 100vw;
+  height: 100%;
 }
 
 .form {
+  width: 50vw;
   display: flex;
   flex-direction: column;
   a {
