--- a/styles/AdStyling/Price.module.scss
+++ b/styles/AdStyling/Price.module.scss
@@ -16,18 +16,11 @@ $beigeColor: #f6ece3;
     }
   }
 
-  .btn {
-    background-color: $peachColor;
-    box-shadow: 0px 8px 10px rgba(192, 190, 189, 0.17);
-    border-radius: 45px;
-    width: 40px;
-    height: 40px;
-    border: none;
-    font-size: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
+  .PlusCircle {
+    margin-left: 1rem;
+  }
+  .MinusCircle {
+    margin-right: 1rem;
   }
 
   .PriceContainer {
