--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -9,21 +9,22 @@ $primaryColor: #0e5657;
   height: 80px;
   justify-content: center;
   align-items: center;
+  position: sticky;
+
   @media (min-width: $md) {
     padding: 0;
     margin: 0;
-    background: rgba(white, 0.85);
-    position: absolute;
+    background: rgba(white, 1);
     top: 0;
     left: 0;
     width: 100%;
+    // border-radius: 0 0 2rem 2rem;
   }
 
   .NavMenu {
     display: none;
     color: black;
     list-style: none;
-    background: rgba(white, 0.5);
 
     @media (min-width: $md) {
       display: flex;
@@ -46,7 +47,7 @@ $primaryColor: #0e5657;
 
   .NavMenuActive {
     z-index: 99;
-    background-color: white;
+    background: rgba(white, 1);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -59,6 +60,7 @@ $primaryColor: #0e5657;
     opacity: 1;
     list-style: none;
     transition: all 0.5s ease;
+    border-radius: 0 0 2rem 2rem;
     @media (min-width: $md) {
       .PrimaryLinksWrapper {
         display: flex;
