--- a/components/Parts/Textarea/Textarea.module.scss
+++ b/components/Parts/Textarea/Textarea.module.scss
@@ -3,8 +3,9 @@
   border-radius: 10px;
   height: 80px;
   margin: 10px 0 0px 0;
-  border: 1px solid #000;
+  border: 2px solid #0e5657;
   padding: 15px;
   font-family: "Greycliff";
+  font-size: 1rem;
   margin-bottom: 20px;
 }
