--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -145,8 +145,12 @@ $primaryColor: #0e5657;
     font-size: 1.3rem;
 
     svg {
-      margin: 0 0.5rem;
-      cursor: pointer;
+      margin: 0.5rem 0.5rem;
+
+      @media (min-width: $md) {
+        margin: 0.2rem 0.75rem;
+        cursor: pointer;
+      }
 
       &:hover {
         color: $primaryColor;
