--- a/components/Parts/Card/Card.module.scss
+++ b/components/Parts/Card/Card.module.scss
@@ -19,9 +19,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  align-content: center;
 
   @include tablet {
-    width: 320px;
+    width: 270px;
     flex-wrap: wrap;
   }
 
@@ -34,6 +35,6 @@
   p {
     font-size: 18px;
     color: #171211;
-    width: 270px;
+    line-height: 131%;
   }
 }
